8216308: StackTraceElement::fill_in can use injected Class source-file

Reviewed-by: coleenp, dholmes